--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -1,73 +1,51 @@
 <section class="luxe-hero">
   <div class="container luxe-hero__container">
-    <div class="contacts__map luxe-hero__shadow">
-      <a
-        class="contacts__phone contacts__phone--map color-adress--desktop"
-        href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6"
-        target="_blank"
-        rel="noopener noreferrer nofollow"
-        ><svg class="contacts__icon" width="12" height="20">
-          <use href="./images/sprite.svg#icon-geo-marker12"></use></svg
-        ><span class="map__text"
-          >Україна, м. Полтава, вул. Маршала Бірюзова, 15</span
-        ></a
-      >
-    </div>
-    <h2>ДВОМІСНИЙ НОМЕР люкс</h2>
-    <p>
+    <a class="luxe-hero__map" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
+      rel="noopener noreferrer nofollow"><svg class="luxe-hero-map__icon" width="10" height="16">
+        <use href="./images/sprite.svg#icon-geo-marker12"></use>
+      </svg><span class="map__adress">Україна, м. Полтава,<br> вул. Маршала Бірюзова, 15</span></a>
+    <h2 class="luxe-hero__tittle">ДВОМІСНИЙ НОМЕР люкс</h2>
+    <p class="luxe-hero__text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-    <div class="social">
-      <ul class="footer__social">
-        <li class="footer__icon">
-          <a
-            href="https://www.instagram.com/"
-            target="blank"
-            rel="noopener noreferrer nofollow"
-            class="icon-social__footer icon-social"
-          >
-            <span class="icon-social__title">Instagram</span>
-            <div class="icon-social__thumb">
-              <svg class="icon-social__icon" width="24" height="24">
-                <use href="./images/sprite.svg#icon-instagram"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="footer__icon">
-          <a
-            href="https://www.facebook.com/"
-            target="blank"
-            rel="noopener noreferrer nofollow"
-            class="icon-social__footer icon-social"
-          >
-            <span class="icon-social__title">Facebook</span>
-            <div class="icon-social__thumb">
-              <svg class="icon-social__icon" width="24" height="24">
-                <use href="./images/sprite.svg#icon-facebook"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-        <li class="footer__icon">
-          <a
-            href="https://web.telegram.org/k/"
-            target="blank"
-            rel="noopener noreferrer nofollow"
-            class="icon-social__footer icon-social"
-          >
-            <span class="icon-social__title">Telegram</span>
-            <div class="icon-social__thumb">
-              <svg class="icon-social__icon" width="24" height="24">
-                <use href="./images/sprite.svg#icon-telegram"></use>
-              </svg>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <button type="button" class="button">Переглянути ціни</button>
+    <ul class="luxe-hero__social">
+      <li class="footer__icon">
+        <a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer nofollow"
+          class="icon-social__footer icon-social">
+          <span class="icon-social__title">Instagram</span>
+          <div class="icon-social__thumb">
+            <svg class="icon-social__icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </div>
+        </a>
+      </li>
+      <li class="footer__icon">
+        <a href="https://www.facebook.com/" target="blank" rel="noopener noreferrer nofollow"
+          class="icon-social__footer icon-social">
+          <span class="icon-social__title">Facebook</span>
+          <div class="icon-social__thumb">
+            <svg class="icon-social__icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </div>
+        </a>
+      </li>
+      <li class="footer__icon">
+        <a href="https://web.telegram.org/k/" target="blank" rel="noopener noreferrer nofollow"
+          class="icon-social__footer icon-social">
+          <span class="icon-social__title">Telegram</span>
+          <div class="icon-social__thumb">
+            <svg class="icon-social__icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-telegram"></use>
+            </svg>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <button type="button" class="button luxe-hero__button">Переглянути ціни</button>
   </div>
+
 </section>
