--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -1,21 +1,61 @@
-.luxe-hero {
-  background-color: #3d3e45;
-  background-image: url(../images/room/room-1-mob.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  flex-grow: 1;
-}
-.luxe-hero__container {
-  padding-top: 64px;
-  padding-bottom: 40px;
-}
-.luxe-hero__shadow {
-  height: 143px;
+
+ .luxe-hero {
+   background-color: #3d3e45;
   background-image: linear-gradient(
     180deg,
     #000000 0%,
     rgba(0, 0, 0, 0.55) 54.17%,
     rgba(0, 0, 0, 0) 100%
-  );
+  ), url(../images/room/room-1-mob.jpg);
+  background-repeat: no-repeat;
+  background-position: top, center;
+  background-size: 100% 143px, cover;
+}
+.luxe-hero__container {
+  padding-top: 64px;
+  padding-bottom: 40px;
+}
+
+.luxe-hero__map {
+  @include font(400, 12px, 1.25, 0.01em);
+  color: $colorTextAddressHeader;
+  width: 210px;
+  height: 47px;
+  border: 1px solid rgba(243, 198, 83, 0.7);
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  padding-left: 11px;
+  margin-bottom: 372px;
+   }
+.map__adress {
+  width: 179px;
+  height: 30px;
+ }
+.luxe-hero-map__icon {
+  margin-right: 13px;
+  fill: $colorAccentYellow;
+}
+.luxe-hero__tittle {
+font-family: 'Times New Roman';
+@include font(700, 28px, 1.14, 0.05em);
+color: $colorWhite;
+width: 325px;
+margin-bottom: 14px;
+}
+.luxe-hero__text {
+  @include font(700, 12px, 1.25, 0.02em);
+ color: $colorWhite;
+ width: 325px;
+ margin-bottom: 17px;
+}
+.luxe-hero__social {
+    gap: 8px;
+    display: flex; 
+  flex-direction: column;
+  }
+.luxe-hero__button {
+width: 232px;
+height: 48px;
+
 }
