--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -34,20 +34,19 @@
               ./images/hotel/hotel-1-mob.jpg    1x,
               ./images/hotel/hotel-1-mob-2x.jpg 2x
             "
-            media="(min-width: 414px)"
+            media="(min-width: 320px)"
           />
           <img
-            src="./images/hotel/hotel-1-mob.jpg"
+            src="./images/hotel/hotel-1-desk.jpg"
             alt="гостинна кімната"
-            width="244"
-            height="322"
+            sizes="(min-width: 1280px) 460px, (min-width: 1024px) 400px, 246px"
           />
         </picture>
       </li>
     </ul>
     <div class="room-for-3-tablet__wrap">
-      <div class="room-for-3-image__wrap">
-        <div class="room-for-3-image__others-room">
+      <ul class="room-for-3-image">
+        <li class="room-for-3-image__others-room">
           <picture>
             <source
               srcset="
@@ -68,17 +67,17 @@
                 ./images/hotel/hotel-2-mob.jpg    1x,
                 ./images/hotel/hotel-2-mob-2x.jpg 2x
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
             />
             <img
-              src="./images/hotel/hotel-2-mob.jpg"
+              src="./images/hotel/hotel-2-desk.jpg"
               alt="ванна кімната"
               width="194"
               height="194"
             />
           </picture>
-        </div>
-        <div class="room-for-3-image__others-room">
+        </li>
+        <li class="room-for-3-image__others-room">
           <picture>
             <source
               srcset="
@@ -99,17 +98,17 @@
                 ./images/hotel/hotel-3-mob.jpg    1x,
                 ./images/hotel/hotel-3-mob-2x.jpg 2x
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
             />
             <img
-              src="./images/hotel/hotel-3-mob.jpg"
+              src="./images/hotel/hotel-3-desk.jpg"
               alt="краєвид з вікна"
               width="194"
               height="194"
             />
           </picture>
-        </div>
-      </div>
+        </li>
+      </ul>
       <div class="room-for-3-btn__wrap">
         <a href="./room-for-3.html" class="room-for-3__details btn"
           >Детальніше</a
