--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,42 +1,48 @@
 html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
+  box-sizing: border-box;
+}
 
-  p,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 0;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
-  a {
-    text-decoration: none;
-  }
-  
-  ul,
-  ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 
- button {
-    cursor: pointer;
+a {
+  text-decoration: none;
+}
 
-  }
-  address {
-    font-style: normal;
-  }
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  img {
-    display: block;
-   }
+button {
+  cursor: pointer;
+}
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+th,
+td {
+  padding: 0;
+}
