--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -121,6 +121,13 @@ address {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+th,
+td {
+  padding: 0;
 }
 
 .backdrop {
@@ -338,6 +345,160 @@ img {
   background-color: #F0ECD6;
 }
 
+.room-for-3__wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+@media screen and (min-width: 1280px) {
+  .room-for-3__wrap {
+    margin-right: 57px;
+  }
+}
+
 .room-for-3__pre-title {
+  font-family: "Times New Roman";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.15;
   margin-bottom: 8px;
+  color: #BABABA;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3__pre-title {
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 1.16;
+    margin-bottom: 4px;
+  }
+}
+
+.room-for-3-logo__wrap {
+  display: table;
+  margin-left: auto;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3-logo__wrap {
+    margin-bottom: 62px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .room-for-3-logo__wrap {
+    margin-bottom: 72px;
+  }
+}
+
+.room-for-3__logo {
+  text-align: right;
+  margin-right: -0.3em;
+  color: #494848;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3__logo {
+    font-size: 64px;
+    line-height: 1.08;
+  }
+}
+
+.room-for-3__title {
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3__title {
+    margin-bottom: 16px;
+    margin-right: 43px;
+    font-size: 30px;
+    line-height: 1.13;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .room-for-3__title {
+    margin-right: 0;
+    margin-bottom: 24px;
+    font-size: 36px;
+    line-height: 1.14;
+  }
+}
+
+.room-for-3__after-title {
+  margin-right: 59px;
+  width: 242px;
+  margin-bottom: 32px;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3__after-title {
+    width: 400px;
+    margin-right: 20px;
+    margin-bottom: 0;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .room-for-3__after-title {
+    width: 400px;
+    margin-bottom: 0;
+    margin-right: 53px;
+  }
+}
+
+.room-for-3__living-room {
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3__living-room {
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .room-for-3-tablet__wrap {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}
+
+.room-for-3-image {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 72px;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3-image {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .room-for-3-image {
+    gap: 40px;
+  }
+}
+
+.room-for-3-btn__wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+@media screen and (min-width: 1024px) {
+  .room-for-3-btn__wrap {
+    justify-content: center;
+  }
+}
+
+.room-for-3__details {
+  display: inline-flex;
+  align-items: center;
+  padding: 14px 65px;
+  background-color: #000000;
+}
+
+.room-for-3__btn-price {
+  background-color: #000000;
 }/*# sourceMappingURL=index.css.map */
