--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -80,7 +80,7 @@
     <button class="amenities__button" data-modal-open>
       Оформити бронювання
     </button>
-    <a href="#" class="link__amenities"
+    <a href="./hotel.html" class="link__amenities"
       >Повернутися до перегляду номерів
       <svg width="24" height="24" class="amenities__icon">
         <use href="/src/images/sprite.svg#icon-cil_arrow-right32"></use>
