--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -11,37 +11,25 @@
       consequat sunt nostrud amet.
     </p>
     <ul class="luxe-hero__social">
-      <li class="footer__icon">
-        <a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer nofollow"
-          class="icon-social__footer icon-social">
-          <span class="icon-social__title">Instagram</span>
-          <div class="icon-social__thumb">
-            <svg class="icon-social__icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-instagram"></use>
-            </svg>
-          </div>
+      <li class="luxe-hero__icon">
+        <a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer nofollow">
+          <svg class="icon-social--luxe" width="24" height="24">
+            <use href="./images/sprite.svg#icon-instagram"></use>
+          </svg>
         </a>
       </li>
-      <li class="footer__icon">
-        <a href="https://www.facebook.com/" target="blank" rel="noopener noreferrer nofollow"
-          class="icon-social__footer icon-social">
-          <span class="icon-social__title">Facebook</span>
-          <div class="icon-social__thumb">
-            <svg class="icon-social__icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-facebook"></use>
-            </svg>
-          </div>
+      <li class="luxe-hero__icon">
+        <a href="https://www.facebook.com/" target="blank" rel="noopener noreferrer nofollow">
+          <svg class="icon-social--luxe" width="24" height="24">
+            <use href="./images/sprite.svg#icon-facebook"></use>
+          </svg>
         </a>
       </li>
-      <li class="footer__icon">
-        <a href="https://web.telegram.org/k/" target="blank" rel="noopener noreferrer nofollow"
-          class="icon-social__footer icon-social">
-          <span class="icon-social__title">Telegram</span>
-          <div class="icon-social__thumb">
-            <svg class="icon-social__icon" width="24" height="24">
-              <use href="./images/sprite.svg#icon-telegram"></use>
-            </svg>
-          </div>
+      <li class="luxe-hero__icon">
+        <a href="https://web.telegram.org/k/" target="blank" rel="noopener noreferrer nofollow">
+          <svg class="icon-social--luxe" width="24" height="24">
+            <use href="./images/sprite.svg#icon-telegram"></use>
+          </svg>
         </a>
       </li>
     </ul>
