finished slick slider, workin on slide buttons

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -71,8 +71,13 @@
     </p>
   </div>
 
-  <div class="autoplay">
-    <div class="autoplay__thumb">
+  <div class="kitchen-slider">
+    <button type="button" class="slick-prev">
+      <svg>
+        <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
+      </svg>
+    </button>
+    <div class="kitchen-slide">
       <picture>
         <source
           srcset="
@@ -99,10 +104,12 @@
           class="autoplay__photo"
           src="./images/sliders/slider-6-mob.jpg"
           alt="наливають чай у чашку"
+          width="245"
+          height="245"
         />
       </picture>
     </div>
-    <div class="autoplay__thumb">
+    <div class="kitchen-slide">
       <picture>
         <source
           srcset="
@@ -129,10 +136,12 @@
           class="autoplay__photo"
           src="./images/sliders/slider-7-mob.jpg"
           alt="устриці та шампанське"
+          width="245"
+          height="245"
         />
       </picture>
     </div>
-    <div class="autoplay__thumb">
+    <div class="kitchen-slide">
       <picture>
         <source
           srcset="
@@ -159,10 +168,12 @@
           class="autoplay__photo"
           src="./images/sliders/slider-9-mob.jpg"
           alt="гарно сервірований стіл на вулиці"
+          width="245"
+          height="245"
         />
       </picture>
     </div>
-    <div class="autoplay__thumb">
+    <div class="kitchen-slide">
       <picture>
         <source
           srcset="
@@ -189,10 +200,12 @@
           class="autoplay__photo"
           src="./images/sliders/slider-15-mob.jpg"
           alt="гарно сервірований стіл у приміщенні"
+          width="245"
+          height="245"
         />
       </picture>
     </div>
-    <div class="autoplay__thumb">
+    <div class="kitchen-slide">
       <picture>
         <source
           srcset="
@@ -219,8 +232,15 @@
           class="autoplay__photo"
           src="./images/sliders/slider-16-mob.jpg"
           alt="сніданок у ліжко"
+          width="245"
+          height="245"
         />
       </picture>
     </div>
+    <button type="button" class="slick-next">
+      <svg>
+        <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
+      </svg>
+    </button>
   </div>
 </section>
