--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -1,5 +1,5 @@
 <section class="amenities__section">
-  <div class="container amenities__lines">
+  <div class="container">
     <h2 class="amenities__title">Зручності у номері</h2>
 
     <p class="amenities__subdiscription">
