--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -6,7 +6,7 @@
         padding-bottom: 48px;
     }
 
-    &__lines {
+    &__section {
         @include mobimax {
             padding-top: 20px;
             padding-bottom: 20px;
