added custom kitchen slider buttons

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -72,11 +72,6 @@
   </div>
 
   <div class="kitchen-slider">
-    <button type="button" class="slick-prev">
-      <svg>
-        <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
-      </svg>
-    </button>
     <div class="kitchen-slide">
       <picture>
         <source
@@ -237,10 +232,7 @@
         />
       </picture>
     </div>
-    <button type="button" class="slick-next">
-      <svg>
-        <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
-      </svg>
-    </button>
   </div>
+
+  <div class="slider-arrows"></div>
 </section>
