--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -133,3 +133,22 @@ div.kitchen-slide.slick-slide {
   margin-right: 12px;
   margin-left: 12px;
 }
+
+.slider-arrows {
+  display: inline-flex;
+  gap: 30px;
+  border: 1px solid red;
+}
+
+.right-arrow,
+.left-arrow {
+  width: 32px;
+  height: 32px;
+  background-color: orange;
+  background-image: url(../images/left.svg);
+  background-size: cover;
+}
+
+.right-arrow {
+  transform: rotate(180deg);
+}
