--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -109,24 +109,11 @@
   }
 }
 
+// KITCHEN SLIDER CONTAINER
 .kitchen-slider {
   position: relative;
   padding-left: 69px;
   margin-right: -15px;
-
-  .slick-prev {
-    background-color: red;
-    background-image: url(../images/left.svg);
-    position: absolute;
-    top: 265px;
-    left: 200px;
-  }
-  .slick-next {
-    background-color: green;
-    position: absolute;
-    top: 265px;
-    right: 100px;
-  }
 }
 
 div.kitchen-slide.slick-slide {
@@ -134,6 +121,7 @@ div.kitchen-slide.slick-slide {
   margin-left: 12px;
 }
 
+// KITCHEN SLIDER ARROWS
 .slider-arrows {
   display: inline-flex;
   gap: 30px;
@@ -145,7 +133,7 @@ div.kitchen-slide.slick-slide {
   width: 32px;
   height: 32px;
   background-color: orange;
-  background-image: url(../images/left.svg);
+  background-image: url(../images/slider-arrow.svg);
   background-size: cover;
 }
 
