--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -124,17 +124,18 @@ div.kitchen-slide.slick-slide {
 // KITCHEN SLIDER ARROWS
 .slider-arrows {
   display: inline-flex;
-  gap: 30px;
-  border: 1px solid red;
+  gap: 32px;
 }
 
 .right-arrow,
 .left-arrow {
   width: 32px;
   height: 32px;
-  background-color: orange;
   background-image: url(../images/slider-arrow.svg);
   background-size: cover;
+  outline: none;
+  border: none;
+  background-color: transparent;
 }
 
 .right-arrow {
