--- a/src/partials/pages/room-luxe/hero.html
+++ b/src/partials/pages/room-luxe/hero.html
@@ -1,38 +1,47 @@
 <section class="luxe-hero">
   <div class="container luxe-hero__container">
-    <a class="luxe-hero__map" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
+    <a class="luxe-hero__map luxe-hero__map--top" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
       rel="noopener noreferrer nofollow"><svg class="luxe-hero-map__icon" width="10" height="16">
         <use href="./images/sprite.svg#icon-geo-marker12"></use>
       </svg><span class="map__adress">Україна, м. Полтава,<br> вул. Маршала Бірюзова, 15</span></a>
-    <h2 class="luxe-hero__tittle">ДВОМІСНИЙ НОМЕР люкс</h2>
-    <p class="luxe-hero__text">
-      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-      Velit officia consequat duis enim velit mollit. Exercitation veniam
-      consequat sunt nostrud amet.
-    </p>
-    <ul class="luxe-hero__social">
-      <li class="luxe-hero__icon">
-        <a href="https://www.instagram.com/" target="blank" rel="noopener noreferrer nofollow">
-          <svg class="icon-social--luxe" width="24" height="24">
-            <use href="./images/sprite.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="luxe-hero__icon">
-        <a href="https://www.facebook.com/" target="blank" rel="noopener noreferrer nofollow">
-          <svg class="icon-social--luxe" width="24" height="24">
-            <use href="./images/sprite.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="luxe-hero__icon">
-        <a href="https://web.telegram.org/k/" target="blank" rel="noopener noreferrer nofollow">
-          <svg class="icon-social--luxe" width="24" height="24">
-            <use href="./images/sprite.svg#icon-telegram"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+    <div class="luxe-hero__wpap">
+      <h2 class="luxe-hero__tittle">ДВОМІСНИЙ НОМЕР люкс</h2>
+      <p class="luxe-hero__text">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+        Velit officia consequat duis enim velit mollit. Exercitation veniam
+        consequat sunt nostrud amet.
+      </p>
+      <a class="luxe-hero__map luxe-hero__map--bottom" href="https://goo.gl/maps/bBwFzgiCFPFPAu5Y6" target="_blank"
+        rel="noopener noreferrer nofollow"><svg class="luxe-hero-map__icon" width="12" height="20">
+          <use href="./images/sprite.svg#icon-geo-marker12"></use>
+        </svg><span class="map__adress">Україна, м. Полтава,<br> вул. Маршала Бірюзова, 15</span></a>
+      <ul class="luxe-hero__social">
+        <li class="luxe-hero__icon">
+          <a href="https://www.instagram.com/" class="luxe-hero_soclink" target="blank"
+            rel="noopener noreferrer nofollow">
+            <svg class="icon-social--luxe" width="24" height="24">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="luxe-hero__icon">
+          <a href="https://www.facebook.com/" class="luxe-hero_soclink" target="blank"
+            rel="noopener noreferrer nofollow">
+            <svg class="icon-social--luxe" width="24" height="24">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="luxe-hero__icon">
+          <a href="https://web.telegram.org/" class="luxe-hero_soclink" target="blank"
+            rel="noopener noreferrer nofollow">
+            <svg class="icon-social--luxe" width="24" height="24">
+              <use href="./images/sprite.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <button type="button" class="button luxe-hero__button">Переглянути ціни</button>
   </div>
 
