--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -1,4 +1,17 @@
 
+ .luxe-hero__container {
+  padding-top: 64px;
+  padding-bottom: 40px;
+  @include tablet {
+    padding-top: 468px;
+  padding-bottom: 24px;
+  display: flex;
+  gap: 191px;
+  }
+  position: relative;
+  
+}
+
  .luxe-hero {
    background-color: #3d3e45;
   background-image: linear-gradient(
@@ -11,41 +24,52 @@
   background-position: top, center;
     background-size: 100% 143px, cover;
     @include tablet {
+      background-image: linear-gradient(
+    180deg,
+    #000000 0%,
+    rgba(0, 0, 0, 0.55) 54.17%,
+    rgba(0, 0, 0, 0) 100%
+  ), url(../images/room/room-1-tab.jpg);
     background-size: 100% 116px, cover;
   }
 }
-.luxe-hero__container {
-  padding-top: 64px;
-  padding-bottom: 40px;
-  @include tablet {
-    padding-top: 100px;
-  padding-bottom: 24px;
-  }
-  position: relative;
-  
-}
 
 .luxe-hero__map {
-  @include font(400, 12px, 1.25, 0.01em);
   color: $colorTextAddressHeader;
-  width: 210px;
-  height: 47px;
   border: 1px solid rgba(243, 198, 83, 0.7);
   border-radius: 2px;
   display: flex;
   align-items: center;
-  padding-left: 11px;
-  margin-bottom: 372px;
-  margin-left: auto;
-   }
+ 
+     }
 .map__adress {
   width: 179px;
   height: 30px;
+  @include tablet {
+    width: 233px;
+  height: 40px;
+  }
  }
 .luxe-hero-map__icon {
   margin-right: 13px;
   fill: $colorAccentYellow;
+  @include tablet {
+    margin-right: 16px;
+  }
 }
+.luxe-hero__map--top {
+  @include tablet {
+    display: none;
+  }
+  margin-bottom: 372px;
+  margin-left: auto;
+  width: 210px;
+  height: 47px;
+  @include font(400, 12px, 1.25, 0.01em);
+   padding-left: 11px;
+
+}
+
 .luxe-hero__tittle {
 font-family: 'Times New Roman';
 @include font(700, 28px, 1.14, 0.05em);
@@ -55,6 +79,12 @@ width: 100%;
     width: 325px;
   }
 margin-bottom: 14px;
+@include tablet {
+    width: 507px;
+    white-space: nowrap;
+    @include font(700, 36px, 1.14, 0.05em);
+margin-bottom: 24px;
+  }
 }
 .luxe-hero__text {
   @include font(700, 12px, 1.25, 0.02em);
@@ -64,6 +94,25 @@ margin-bottom: 14px;
     width: 325px;
   }
  margin-bottom: 30px;
+ @include tablet {
+    width: 400px;
+    @include font(700, 16px, 1.25, 0.02em);
+    margin-bottom: 24px;
+  }
+}
+
+.luxe-hero__map--bottom {
+  @include mobilemax {
+    display: none;}
+width: 285px;
+  height: 56px;
+  @include font(400, 16px, 1.25, 0.01em);
+  padding-left: 16px;
+}
+
+.luxe-hero__icon{
+  width: 24px;
+  height: 24px;
 }
 .luxe-hero__social {
     gap: 8px;
@@ -71,12 +120,21 @@ margin-bottom: 14px;
   flex-direction: column;
   position: absolute;
   bottom: 14px;
+  @include tablet {
+    flex-direction: row;
+     gap: 20px;
+     left: 372px;
+     bottom: 38px;
+  }
   }
 
   .icon-social--luxe {
 fill: rgba(243, 198, 83, 0.7);;
   }
-  
+  .luxe-hero_soclink {
+    width: 24px;
+  height: 24px;
+  }
 .luxe-hero__button {
 width: 232px;
 height: 48px;
@@ -88,4 +146,9 @@ background-color: rgba(0, 0, 0, 0.4);
 border: 2px solid $colorWhite;
 @include font(700, 16px, 1.25, 0.02em);
 color: $colorAccentYellow;
+ @include tablet {
+  margin-left: 0;
+  margin-top: 140px;
+  }
 }
+
