--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -1,9 +1,8 @@
 .amenities {
 
-    &__section .container {
+    &__section {
         background-color: $colorBgLemon;
-        padding-top: 48px;
-        padding-bottom: 48px;
+        
     }
 
     &__section {
