finished with slider buttons, reviewing section

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -71,168 +71,169 @@
     </p>
   </div>
 
-  <div class="kitchen-slider">
-    <div class="kitchen-slide">
-      <picture>
-        <source
-          srcset="
-            ./images/sliders/slider-6-desk.jpg 1x,
-            ./images/sliders/slider-6-desk.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-6-tab.jpg 1x,
-            ./images/sliders/slider-6-tab.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-6-mob.jpg 1x,
-            ./images/sliders/slider-6-mob.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/sliders/slider-6-mob.jpg"
-          alt="наливають чай у чашку"
-          width="245"
-          height="245"
-        />
-      </picture>
+  <div class="kitchen-slider-box">
+    <div class="kitchen-slider">
+      <div class="kitchen-slide">
+        <picture>
+          <source
+            srcset="
+              ./images/sliders/slider-6-desk.jpg 1x,
+              ./images/sliders/slider-6-desk.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-6-tab.jpg 1x,
+              ./images/sliders/slider-6-tab.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-6-mob.jpg 1x,
+              ./images/sliders/slider-6-mob.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="autoplay__photo"
+            src="./images/sliders/slider-6-mob.jpg"
+            alt="наливають чай у чашку"
+            width="245"
+            height="245"
+          />
+        </picture>
+      </div>
+      <div class="kitchen-slide">
+        <picture>
+          <source
+            srcset="
+              ./images/sliders/slider-7-desk.jpg 1x,
+              ./images/sliders/slider-7-desk.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-7-tab.jpg 1x,
+              ./images/sliders/slider-7-tab.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-7-mob.jpg 1x,
+              ./images/sliders/slider-7-mob.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="autoplay__photo"
+            src="./images/sliders/slider-7-mob.jpg"
+            alt="устриці та шампанське"
+            width="245"
+            height="245"
+          />
+        </picture>
+      </div>
+      <div class="kitchen-slide">
+        <picture>
+          <source
+            srcset="
+              ./images/sliders/slider-9-desk.jpg 1x,
+              ./images/sliders/slider-9-desk.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-9-tab.jpg 1x,
+              ./images/sliders/slider-9-tab.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-9-mob.jpg 1x,
+              ./images/sliders/slider-9-mob.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="autoplay__photo"
+            src="./images/sliders/slider-9-mob.jpg"
+            alt="гарно сервірований стіл на вулиці"
+            width="245"
+            height="245"
+          />
+        </picture>
+      </div>
+      <div class="kitchen-slide">
+        <picture>
+          <source
+            srcset="
+              ./images/sliders/slider-15-desk.jpg 1x,
+              ./images/sliders/slider-15-desk.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-15-tab.jpg 1x,
+              ./images/sliders/slider-15-tab.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-15-mob.jpg 1x,
+              ./images/sliders/slider-15-mob.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="autoplay__photo"
+            src="./images/sliders/slider-15-mob.jpg"
+            alt="гарно сервірований стіл у приміщенні"
+            width="245"
+            height="245"
+          />
+        </picture>
+      </div>
+      <div class="kitchen-slide">
+        <picture>
+          <source
+            srcset="
+              ./images/sliders/slider-16-desk.jpg 1x,
+              ./images/sliders/slider-16-desk.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-16-tab.jpg 1x,
+              ./images/sliders/slider-16-tab.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ./images/sliders/slider-16-mob.jpg 1x,
+              ./images/sliders/slider-16-mob.jpg 2x
+            "
+            media="(min-width: 414px)"
+          />
+          <img
+            class="autoplay__photo"
+            src="./images/sliders/slider-16-mob.jpg"
+            alt="сніданок у ліжко"
+            width="245"
+            height="245"
+          />
+        </picture>
+      </div>
     </div>
-    <div class="kitchen-slide">
-      <picture>
-        <source
-          srcset="
-            ./images/sliders/slider-7-desk.jpg 1x,
-            ./images/sliders/slider-7-desk.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-7-tab.jpg 1x,
-            ./images/sliders/slider-7-tab.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-7-mob.jpg 1x,
-            ./images/sliders/slider-7-mob.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/sliders/slider-7-mob.jpg"
-          alt="устриці та шампанське"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
-    <div class="kitchen-slide">
-      <picture>
-        <source
-          srcset="
-            ./images/sliders/slider-9-desk.jpg 1x,
-            ./images/sliders/slider-9-desk.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-9-tab.jpg 1x,
-            ./images/sliders/slider-9-tab.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-9-mob.jpg 1x,
-            ./images/sliders/slider-9-mob.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/sliders/slider-9-mob.jpg"
-          alt="гарно сервірований стіл на вулиці"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
-    <div class="kitchen-slide">
-      <picture>
-        <source
-          srcset="
-            ./images/sliders/slider-15-desk.jpg 1x,
-            ./images/sliders/slider-15-desk.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-15-tab.jpg 1x,
-            ./images/sliders/slider-15-tab.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-15-mob.jpg 1x,
-            ./images/sliders/slider-15-mob.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/sliders/slider-15-mob.jpg"
-          alt="гарно сервірований стіл у приміщенні"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
-    <div class="kitchen-slide">
-      <picture>
-        <source
-          srcset="
-            ./images/sliders/slider-16-desk.jpg 1x,
-            ./images/sliders/slider-16-desk.jpg 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-16-tab.jpg 1x,
-            ./images/sliders/slider-16-tab.jpg 2x
-          "
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="
-            ./images/sliders/slider-16-mob.jpg 1x,
-            ./images/sliders/slider-16-mob.jpg 2x
-          "
-          media="(min-width: 414px)"
-        />
-        <img
-          class="autoplay__photo"
-          src="./images/sliders/slider-16-mob.jpg"
-          alt="сніданок у ліжко"
-          width="245"
-          height="245"
-        />
-      </picture>
-    </div>
+    <div class="slider-arrows"></div>
   </div>
-
-  <div class="slider-arrows"></div>
 </section>
