--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -125,6 +125,7 @@ div.kitchen-slide.slick-slide {
 .slider-arrows {
   display: inline-flex;
   gap: 32px;
+  margin: 20px auto 0 286px;
 }
 
 .right-arrow,
