--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -1,18 +1,5 @@
 
- .luxe-hero__container {
-  padding-top: 64px;
-  padding-bottom: 40px;
-  @include tablet {
-    padding-top: 468px;
-  padding-bottom: 24px;
-  display: flex;
-  gap: 191px;
-  }
-  position: relative;
-  
-}
-
- .luxe-hero {
+  .luxe-hero {
    background-color: #3d3e45;
   background-image: linear-gradient(
     180deg,
@@ -31,6 +18,33 @@
     rgba(0, 0, 0, 0) 100%
   ), url(../images/room/room-1-tab.jpg);
     background-size: 100% 116px, cover;
+  }
+  @include desktop {
+    background-image: linear-gradient(
+    180deg,
+    #000000 0%,
+    rgba(0, 0, 0, 0.55) 54.17%,
+    rgba(0, 0, 0, 0) 100%
+  ), url(../images/room/room-1-desk.jpg);
+    background-size: 100% 147px, 100% 100%;
+
+  }
+}
+
+.luxe-hero__container {
+  padding-top: 64px;
+  padding-bottom: 40px;
+  @include tablet {
+    padding-top: 468px;
+  padding-bottom: 24px;
+  display: flex;
+  gap: 191px;
+  }
+  position: relative;
+  @include desktop {
+    padding-top: 683px;
+  padding-bottom: 48px;
+  gap: 371px;
   }
 }
 
@@ -85,6 +99,7 @@ margin-bottom: 14px;
     @include font(700, 36px, 1.14, 0.05em);
 margin-bottom: 24px;
   }
+ 
 }
 .luxe-hero__text {
   @include font(700, 12px, 1.25, 0.02em);
@@ -99,6 +114,7 @@ margin-bottom: 24px;
     @include font(700, 16px, 1.25, 0.02em);
     margin-bottom: 24px;
   }
+  
 }
 
 .luxe-hero__map--bottom {
@@ -108,6 +124,8 @@ width: 285px;
   height: 56px;
   @include font(400, 16px, 1.25, 0.01em);
   padding-left: 16px;
+  @include desktop {
+    display: none;}
 }
 
 .luxe-hero__icon{
@@ -126,6 +144,8 @@ width: 285px;
      left: 372px;
      bottom: 38px;
   }
+  @include desktop {
+    display: none;}
   }
 
   .icon-social--luxe {
@@ -149,6 +169,9 @@ color: $colorAccentYellow;
  @include tablet {
   margin-left: 0;
   margin-top: 140px;
+  }
+  @include desktop {
+    margin-top: 82px;
   }
 }
 
