--- a/src/sass/pages/room-luxe/_hero.scss
+++ b/src/sass/pages/room-luxe/_hero.scss
@@ -9,7 +9,7 @@
   ), url(../images/room/room-1-mob.jpg);
   background-repeat: no-repeat;
   background-position: top, center;
-    background-size: 100% 143px, cover;
+    background-size: 100% 143px, 100% 100%;
     @include tablet {
       background-image: linear-gradient(
     180deg,
@@ -17,7 +17,7 @@
     rgba(0, 0, 0, 0.55) 54.17%,
     rgba(0, 0, 0, 0) 100%
   ), url(../images/room/room-1-tab.jpg);
-    background-size: 100% 116px, cover;
+    background-size: 100% 116px, 100% 100%;
   }
   @include desktop {
     background-image: linear-gradient(
